ensure left-alignment of charts column

--- a/src/app/schema/index.less
+++ b/src/app/schema/index.less
@@ -3,12 +3,21 @@
 
   .schema-field {
     // .list-group-item;
-    padding: 24px 0 0 25px;
+    padding: 24px 0 0 0;
     border-bottom: 3px solid @gray8;
     background: @pw;
+    transition: all 250ms ease-out;
 
     .row {
       margin-bottom: 24px;
+    }
+
+    .schema-field-type-list {
+      padding-left: 24px;
+    }
+
+    .schema-field-name {
+      padding-left: 24px;
     }
 
     .array-subtypes {
@@ -17,11 +26,12 @@
       }
     }
 
+
+
     .schema-field {
+      // second level
       border-bottom: 3px solid @gray8;
       border-left: 24px solid @gray8;
-      margin-left: -25px;
-
       animation-duration: 250ms;
       position: relative;
       animation-name: fadein;
@@ -44,6 +54,66 @@
       &:last-child {
         border-bottom: 3px solid @gray8;
       }
+
+      .row {
+        margin-left: -39px;
+      }
+
+      .schema-field-type-list {
+        padding-left: 48px;
+      }
+      .schema-field-name {
+        padding-left: 48px;
+      }
+      .schema-field {
+        // third level
+        .schema-field-type-list {
+          padding-left: 72px;
+        }
+        .schema-field-name {
+          padding-left: 72px;
+        }
+        .row {
+          margin-left: -63px;
+        }
+        .schema-field {
+          // fourth level
+          .schema-field-type-list {
+            padding-left: 96px;
+          }
+          .schema-field-name {
+            padding-left: 96px;
+          }
+          .row {
+            margin-left: -87px;
+          }
+          .schema-field {
+            // fifth level
+            .schema-field-type-list {
+              padding-left: 120px;
+            }
+            .schema-field-name {
+              padding-left: 120px;
+            }
+            .row {
+              margin-left: -111px;
+            }
+            .schema-field {
+              // sixth level
+              .schema-field-type-list {
+                padding-left: 144px;
+              }
+              .schema-field-name {
+                padding-left: 144px;
+              }
+              .row {
+                margin-left: -135px;
+              }
+            }
+          }
+        }
+      }
+
     }
 
     .schema-field-name {
@@ -53,8 +123,6 @@
       text-overflow: ellipsis;
       white-space: nowrap;
       display: inline-block;
-      padding-left: 12px;
-      margin-left: -12px;
     }
 
     &.schema-field-object, &.schema-field-array {
